# HodgepodgeBot

./: .flake8  .gitignore  Pipfile  pyproject.toml
src/denis_hodge_podge_bot/: bot.py  config.py
src/denis_hodge_podge_bot/currency_exchange/: __init__.py  currencies.csv  errors.py  exchange_rates_data.py
src/denis_hodge_podge_bot/handlers/: currency_exchange.py  cute_animal.py  poll.py  start.py  weather.py
src/denis_hodge_podge_bot/keyboards/: yes_or_no_keyboard.py
src/denis_hodge_podge_bot/middlewares/: add_aiohttp_session.py
src/denis_hodge_podge_bot/weather/: __init__.py  types.py  weather_condition_codes_ru.csv  weatherstock.py
tests/: test_start.py
tests/unit/currency_exchange/: test_currency_code_converter.py  test_split_value_source_target.py
tests/unit/weather/: moscow_response.json  test_weatherstock.py
