[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "denis_hodge_podge_bot"
version = "0.0.1"
authors = [
  { name="Denis Sleptsov", email="hurrdurrrderp@gmail.com" },
]
description = "Telegram bot that does stuff"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flake8"
]